--- a/Assassin.html
+++ b/Assassin.html
@@ -16,7 +16,7 @@
     <br>
     <div id = "Nav" >
         <ul>
-            <a href = "main.html"><li>Home</li></a>
+            <a href = "Main.html"><li>Home</li></a>
             <a href = "Archer.html"><li>Archer</li></a>
             <a href = "Assassin.html"><li>Assassin</li></a>
             <a href = "Berserker.html"><li>Berserker</li></a>
