--- a/Index.html
+++ b/Index.html
@@ -17,7 +17,7 @@
     <br>
     <div id = "Nav" >
         <ul>
-            <a href = "Index.html"><li>Home</li></a>
+            <a href = "index.html"><li>Home</li></a>
             <a href = "Archer.html"><li>Archer</li></a>
             <a href = "Assassin.html"><li>Assassin</li></a>
             <a href = "Berserker.html"><li>Berserker</li></a>
