--- a/Assassin.html
+++ b/Assassin.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "css.css">
-    <title>Assassin</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Assassin</title>
 </head>
 
 <body>
-    <div id = "banner">
-        <!-- <header>Fate Classes</header> -->
-        <img src = "Banner.png"width = "1000" height = "200" alt = "Fate Classes">
+  <div id="banner">
+    <!-- <header>Fate Classes</header> -->
+    <img src="Banner.png" width="1000" height="200" alt="Fate Classes">
+  </div>
+  <br>
+  <div id="Nav">
+    <ul>
+      <a href="index.html">
+        <li>Home</li>
+      </a>
+      <a href="Archer.html">
+        <li>Archer</li>
+      </a>
+      <a href="Assassin.html">
+        <li>Assassin</li>
+      </a>
+      <a href="Berserker.html">
+        <li>Berserker</li>
+      </a>
+      <a href="Caster.html">
+        <li>Caster</li>
+      </a>
+      <a href="Lancer.html">
+        <li>Lancer</li>
+      </a>
+      <a href="Rider.html">
+        <li>Ruler</li>
+      </a>
+      <a href="Saber.html">
+        <li>Saber</li>
+      </a>
+      <a href="Savior.html">
+        <li>Savior</li>
+      </a>
+    </ul>
+  </div>
+  <div id="Contents">
+    <h1>Assassin class</h1>
+    <div class="row">
+      <div class="column">
+        <p>The Assassin class is known for relying on stealth to eliminate the masters of holy grail wars, rather than fight the servants. This may be caused by their generally low stats and unique class abilities.</p>
+        <p>The class skills that Assassins are known for having include Presence Concealement, which allows them to completely eliminate their presence, and perform lethal strikes on master and servant alike.</p>
+      </div>
+      <div class="column">
+        <img src="Assassincard.jpg" alt="Assassin Card">
+      </div>
     </div>
-    <br>
-    <div id = "Nav" >
-        <ul>
-            <a href = "index.html"><li>Home</li></a>
-            <a href = "Archer.html"><li>Archer</li></a>
-            <a href = "Assassin.html"><li>Assassin</li></a>
-            <a href = "Berserker.html"><li>Berserker</li></a>
-            <a href = "Caster.html"><li>Caster</li></a>
-            <a href = "Lancer.html"><li>Lancer</li></a>
-            <a href = "Rider.html"><li>Ruler</li></a>
-            <a href = "Saber.html"><li>Saber</li></a>
-            <a href = "Savior.html"><li>Savior</li></a>
-        </ul>
-    </div>
-    <div id = "Contents">
-        <h1>Assassin class</h1>
-        <div class = "row">
-            <div class = "column">
-                <p>The Assassin class is known for relying on stealth to eliminate the masters of holy grail wars, rather than fight the servants. This may be caused by their generally low stats and unique class abilities.</p>
-                <p>The class skills that Assassins are known for having include Presence Concealement, which allows them to completely eliminate their presence, and perform lethal strikes on master and servant alike.</p>
-            </div>
-            <div class = "column">
-                <img src = "Assassincard.jpg" width = "200" height = "350" alt = "Assassin Card">
-            </div>
-        </div>
-        <h2>Notable Assassins</h2>
-        <ul>
-            <li>Li Shuwen</li>
-            <li>Dr. Jekyll</li>
-            <li>Cleopatra</li>
-            <li>Jack The Ripper</li>
-        </ul>
-    </div>
-    
-
+    <h2>Notable Assassins</h2>
+    <ul>
+      <li>Li Shuwen</li>
+      <li>Dr. Jekyll</li>
+      <li>Cleopatra</li>
+      <li>Jack The Ripper</li>
+    </ul>
+  </div>
 </body>
 
 </html>
