--- a/Caster.html
+++ b/Caster.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "css.css">
-    <title>Caster</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Caster</title>
 </head>
 
 <body>
-    <div id = "banner">
-        <!-- <header>Fate Classes</header> -->
-        <img src = "Banner.png"width = "1000" height = "200" alt = "Fate Classes">
+  <div id="banner">
+    <!-- <header>Fate Classes</header> -->
+    <img src="Banner.png" width="1000" height="200" alt="Fate Classes">
+  </div>
+  <br>
+  <div id="Nav">
+    <ul>
+      <a href="index.html">
+        <li>Home</li>
+      </a>
+      <a href="Archer.html">
+        <li>Archer</li>
+      </a>
+      <a href="Assassin.html">
+        <li>Assassin</li>
+      </a>
+      <a href="Berserker.html">
+        <li>Berserker</li>
+      </a>
+      <a href="Caster.html">
+        <li>Caster</li>
+      </a>
+      <a href="Lancer.html">
+        <li>Lancer</li>
+      </a>
+      <a href="Rider.html">
+        <li>Ruler</li>
+      </a>
+      <a href="Saber.html">
+        <li>Saber</li>
+      </a>
+      <a href="Savior.html">
+        <li>Savior</li>
+      </a>
+    </ul>
+  </div>
+  <div id="Contents">
+    <h1>Caster class</h1>
+    <div class="row">
+      <div class="column">
+        <p>The Caster class is seen as the weakest of all seven main servants, with lower general stats, but a much higher magic (mana) stat. The different aged magic they use compared to modern examples makes up the difference, allowing them a better advantage.</p>
+        <p>The class abilities held by Caster servants include Item Creation, allowing for the creation of magical items and tools, and Territory Creation, letting them alter their surroundings to favour their abilities.</p>
+      </div>
+      <div class="column">
+        <img src="Castercard.jpg" alt="Caster Card">
+      </div>
     </div>
-    <br>
-    <div id = "Nav" >
-        <ul>
-            <a href = "index.html"><li>Home</li></a>
-            <a href = "Archer.html"><li>Archer</li></a>
-            <a href = "Assassin.html"><li>Assassin</li></a>
-            <a href = "Berserker.html"><li>Berserker</li></a>
-            <a href = "Caster.html"><li>Caster</li></a>
-            <a href = "Lancer.html"><li>Lancer</li></a>
-            <a href = "Rider.html"><li>Ruler</li></a>
-            <a href = "Saber.html"><li>Saber</li></a>
-            <a href = "Savior.html"><li>Savior</li></a>
-        </ul>
-    </div>
-    <div id = "Contents">
-        <h1>Caster class</h1>
-        <div class = "row">
-            <div class = "column">
-                <p>The Caster class is seen as the weakest of all seven main servants, with lower general stats, but a much higher magic (mana) stat. The different aged magic they use compared to modern examples makes up the difference, allowing them a better advantage.</p>
-                <p>The class abilities held by Caster servants include Item Creation, allowing for the creation of magical items and tools, and Territory Creation, letting them alter their surroundings to favour their abilities.</p>
-            </div>
-            <div class = "column">
-                <img src = "Castercard.jpg" width = "200" height = "350" alt = "Caster Card">
-            </div>
-        </div>
-        <h2>Notable Casters</h2>
-        <ul>
-            <li>Tamamo no Mae</li>
-            <li>Medea</li>
-            <li>Archimedes</li>
-            <li>William Shakespeare</li>
-        </ul>
-    </div>
-    
-
+    <h2>Notable Casters</h2>
+    <ul>
+      <li>Tamamo no Mae</li>
+      <li>Medea</li>
+      <li>Archimedes</li>
+      <li>William Shakespeare</li>
+    </ul>
+  </div>
 </body>
 
 </html>
