--- a/Rider.html
+++ b/Rider.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "css.css">
-    <title>Rider</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Rider</title>
 </head>
 
 <body>
-    <div id = "banner">
-        <!-- <header>Fate Classes</header> -->
-        <img src = "Banner.png"width = "1000" height = "200" alt = "Fate Classes">
+  <div id="banner">
+    <!-- <header>Fate Classes</header> -->
+    <img src="Banner.png" width="1000" height="200" alt="Fate Classes">
+  </div>
+  <br>
+  <div id="Nav">
+    <ul>
+      <a href="index.html">
+        <li>Home</li>
+      </a>
+      <a href="Archer.html">
+        <li>Archer</li>
+      </a>
+      <a href="Assassin.html">
+        <li>Assassin</li>
+      </a>
+      <a href="Berserker.html">
+        <li>Berserker</li>
+      </a>
+      <a href="Caster.html">
+        <li>Caster</li>
+      </a>
+      <a href="Lancer.html">
+        <li>Lancer</li>
+      </a>
+      <a href="Rider.html">
+        <li>Ruler</li>
+      </a>
+      <a href="Saber.html">
+        <li>Saber</li>
+      </a>
+      <a href="Savior.html">
+        <li>Savior</li>
+      </a>
+    </ul>
+  </div>
+  <div id="Contents">
+    <h1>Rider Class</h1>
+    <div class="row">
+      <div class="column">
+        <p>The Rider class can sometimes be non-human in nature, though typically has lower stats than the three knight classes (Saber, Archer, Lancer) however, has a legendary mount that makes up for it.</p>
+        <p>The class skills held by Rider often includes Magic resistance, protecting them from lower grade spells, and Riding, which allows them to use whatever can be classified as a vehicle of some kind, from horses to bicycles or even planes.</p>
+      </div>
+      <div class="column">
+        <img src="Ridercard.jpg" alt="Rider Card">
+      </div>
     </div>
-    <br>
-    <div id = "Nav" >
-        <ul>
-            <a href = "index.html"><li>Home</li></a>
-            <a href = "Archer.html"><li>Archer</li></a>
-            <a href = "Assassin.html"><li>Assassin</li></a>
-            <a href = "Berserker.html"><li>Berserker</li></a>
-            <a href = "Caster.html"><li>Caster</li></a>
-            <a href = "Lancer.html"><li>Lancer</li></a>
-            <a href = "Rider.html"><li>Ruler</li></a>
-            <a href = "Saber.html"><li>Saber</li></a>
-            <a href = "Savior.html"><li>Savior</li></a>
-        </ul>
-    </div>
-    <div id = "Contents">
-        <h1>Rider Class</h1>
-        <div class = "row">
-            <div class = "column">
-                <p>The Rider class can sometimes be non-human in nature, though typically has lower stats than the three knight classes (Saber, Archer, Lancer) however, has a legendary mount that makes up for it.</p>
-                <p>The class skills held by Rider often includes Magic resistance, protecting them from lower grade spells, and Riding, which allows them to use whatever can be classified as a vehicle of some kind, from horses to bicycles or even planes.</p>
-            </div>
-            <div class = "column">
-                <img src = "Ridercard.jpg" width = "200" height = "350" alt = "Rider Card">
-            </div>
-        </div>
-        <h2>Notable Riders</h2>
-        <ul>
-            <li>Medusa</li>
-            <li>Alexander the Great (Iskander)</li>
-            <li>Astolfo</li>
-            <li>Francis Drake</li>
-        </ul>
-    </div>
-    
-
+    <h2>Notable Riders</h2>
+    <ul>
+      <li>Medusa</li>
+      <li>Alexander the Great (Iskander)</li>
+      <li>Astolfo</li>
+      <li>Francis Drake</li>
+    </ul>
+  </div>
 </body>
 
 </html>
