--- a/Saber.html
+++ b/Saber.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" type = "text/css" href = "css.css">
-    <title>Saber</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Saber</title>
 </head>
 
 <body>
-    <div id = "banner">
-        <!-- <header>Fate Classes</header> -->
-        <img src = "Banner.png"width = "1000" height = "200" alt = "Fate Classes">
+  <div id="banner">
+    <!-- <header>Fate Classes</header> -->
+    <img src="Banner.png" width="1000" height="200" alt="Fate Classes">
+  </div>
+  <br>
+  <div id="Nav">
+    <ul>
+      <a href="index.html">
+        <li>Home</li>
+      </a>
+      <a href="Archer.html">
+        <li>Archer</li>
+      </a>
+      <a href="Assassin.html">
+        <li>Assassin</li>
+      </a>
+      <a href="Berserker.html">
+        <li>Berserker</li>
+      </a>
+      <a href="Caster.html">
+        <li>Caster</li>
+      </a>
+      <a href="Lancer.html">
+        <li>Lancer</li>
+      </a>
+      <a href="Rider.html">
+        <li>Ruler</li>
+      </a>
+      <a href="Saber.html">
+        <li>Saber</li>
+      </a>
+      <a href="Savior.html">
+        <li>Savior</li>
+      </a>
+    </ul>
+  </div>
+  <div id="Contents">
+    <h1>Saber class</h1>
+    <div class="row">
+      <div class="column">
+        <p>The Saber is often seen as the best of the servants, holding good levels of strength and agility, as well as high stats in all areas barring magic. As the name suggests, this class is held by Swordspeople, however a downside to them is the straightforwardness in which they fight, not relying on their class skills typically, which makes them easy enough to predict.</p>
+        <p>The class skills held by Saber servants include Magic Resistance, allowing them to protect themselves against a range of magic, and Riding, which allows them to be able to use certain types of vehicles with ease.</p>
+      </div>
+      <div class="column">
+        <img src="Sabercard.jpg" alt="Fate Classes">
+      </div>
     </div>
-    <br>
-    <div id = "Nav" >
-        <ul>
-            <a href = "index.html"><li>Home</li></a>
-            <a href = "Archer.html"><li>Archer</li></a>
-            <a href = "Assassin.html"><li>Assassin</li></a>
-            <a href = "Berserker.html"><li>Berserker</li></a>
-            <a href = "Caster.html"><li>Caster</li></a>
-            <a href = "Lancer.html"><li>Lancer</li></a>
-            <a href = "Rider.html"><li>Ruler</li></a>
-            <a href = "Saber.html"><li>Saber</li></a>
-            <a href = "Savior.html"><li>Savior</li></a>
-        </ul>
-    </div>
-    <div id = "Contents">
-        <h1>Saber class</h1>
-        <div class = "row">
-            <div class = "column">
-                <p>The Saber is often seen as the best of the servants, holding good levels of strength and agility, as well as high stats in all areas barring magic. As the name suggests, this class is held by Swordspeople, however a downside to them is the straightforwardness in which they fight, not relying on their class skills typically, which makes them easy enough to predict.</p>
-                <p>The class skills held by Saber servants include Magic Resistance, allowing them to protect themselves against a range of magic, and Riding, which allows them to be able to use certain types of vehicles with ease.</p>
-            </div>
-            <div class = "column">
-                <img src = "Sabercard.jpg" width = "200" height = "350" allt = "Fate Classes">
-            </div>
-        </div>
-        <h2>Notable Sabers</h2>
-        <ul>
-            <li>Artoria Pendragon</li>
-            <li>Nero Claudius Caesar</li>
-            <li>Gawain</li>
-            <li>Charlamagne</li>
-        </ul>
-    </div>
-    
-
+    <h2>Notable Sabers</h2>
+    <ul>
+      <li>Artoria Pendragon</li>
+      <li>Nero Claudius Caesar</li>
+      <li>Gawain</li>
+      <li>Charlamagne</li>
+    </ul>
+  </div>
 </body>
 
 </html>
