--- a/Assassin.html
+++ b/Assassin.html
@@ -12,7 +12,7 @@
 <body>
   <div id="banner">
     <!-- <header>Fate Classes</header> -->
-    <img src="Banner.png" width="1000" height="200" alt="Fate Classes">
+    <img src="Banner.png" alt="Fate Classes">
   </div>
   <br>
   <div id="Nav">
